# pc-tictactoe

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  config.toml  config_champion.toml  config_cl_experiment.toml  config_phase1_regression.toml  config_seedtest_base.toml  config_seedtest_p1.toml  config_seedtest_p1p2.toml  config_stress.toml  config_stress_cl_balanced.toml  config_stress_cl_off.toml  config_stress_ewc_only.toml
.github/workflows/: ci.yml
docs/: actor_hysteresis_signal_plan.md  cl_experiment_results.md  pc_rl_core_cross_wake_bug.md  td_n_implementation_plan.md
planning/: claude-plan-tdd-org.md  claude-plan-tdd.md  session-state.json
sbtdd/: spec-behavior-base.md  spec-behavior.md
src/: integration_tests.rs  main.rs
src/env/: minimax.rs  mod.rs  tictactoe.rs
src/training/: champion.rs  continuous.rs  experiment.rs  fitness.rs  mod.rs  stress_test.rs  trainer.rs
src/ui/: cli.rs  mod.rs
src/utils/: config.rs  logger.rs  metrics.rs  mod.rs
