[package]
name = "pc_tictactoe"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pc-rl-core = "1.2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
