[package]
name = "pc_tictactoe"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
authors = ["Julian Bolivar"]
description = "Tic-Tac-Toe training environment for the Deliberative Predictive Coding (DPC) reinforcement learning agent"
repository = "https://github.com/BolivarTech/PC-TicTacToe"

[dependencies]
pc-rl-core = { path = "D:/jbolivarg/RustProjects/PC-RL-Core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
