[package]
name = "pc_tictactoe"
version = "1.0.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
authors = ["Julian Bolivar"]
description = "Tic-Tac-Toe training environment for the Deliberative Predictive Coding (DPC) reinforcement learning agent"
repository = "https://github.com/BolivarTech/PC-TicTacToe"

[dependencies]
pc-rl-core = { git = "https://github.com/BolivarTech/PC-RL-Core", tag = "v4.0.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
